# systat

./: LICENSE  systat.cabal
src/: Main.hs
src/Systat/: Driver.hs  Module.hs  Opts.hs  Processor.hs
src/Systat/Module/: Battery.hs  DateTime.hs
src/Systat/Modules/: Battery.hs  DateTime.hs
